# Pipeline

./: .gitignore  CMakeLists.txt  Makefile  README.md  input.txt  input1.txt
include/: DataPacket.hpp  EnricherStage.hpp  FileSource.hpp  FilterStage.hpp  FlinkStage.hpp  InputSource.hpp  JsonParserStage.hpp  Logger.hpp  Pipeline.hpp  PipelineBase.hpp  PipelineStage.hpp  SensorSource.hpp  SocketSource.hpp  ThreadSafeQueue.hpp  TransformStage.hpp
src/: EnricherStage.cpp  FileSource.cpp  FilterStage.cpp  FlinkStage.cpp  InputSource.cpp  JsonParserStage.cpp  Logger.cpp  Main.cpp  Pipeline.cpp  SensorSource.cpp  SocketSource.cpp  TransformStage.cpp
test/: generate.sh  input.txt  input2.txt
